# v-man

./: .gitignore  Cargo.toml  README.md  disk.qcow2
src/: build.rs  config.rs  main.rs  vm.rs
templates/: base_domain.xml  build_iso.rs.xml
