[package]
name = "vman"
version = "0.1.0"
authors = ["Guillem Castro <guillemcastro4@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virt = "0.2.11"
structopt = "0.3"
color-eyre = "0.5"
toml = "0.5"
serde = "1.0"
num_cpus = "1.13.0"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tar = "0.4"

[build-dependencies]
ructe = "0.12.0"